# unionGov

./: .editorconfig  .gitignore  .mailmap  default.nix  pyproject.toml
frontend/: package-lock.json  package.json
frontend/public/: credits.md  index.html  manifest.json
frontend/src/: theme.ts
frontend/src/api/: endpoints.config.ts
frontend/src/api/configRef/: index.ts
frontend/src/components/CandidateItem/: index.tsx
frontend/src/components/CandidateSelect/: index.tsx
frontend/src/components/Candidates/: index.tsx
frontend/src/components/Footer/: index.tsx
frontend/src/components/Government/: index.tsx
frontend/src/components/GovernmentItem/: index.tsx
frontend/src/components/Header/: index.tsx
frontend/src/components/Link/: index.tsx
frontend/src/components/ShareButton/: index.tsx
frontend/src/containers/: Candidates.tsx  SelectCandidate.tsx  ShareButton.tsx
frontend/src/hooks/: use-available-candidates.tsx
frontend/src/lib/: sort.ts
frontend/src/navigation/: index.tsx
frontend/src/pages/: Government.tsx  [id].tsx  _app.tsx  _document.js  credits.tsx  index.tsx
frontend/src/redux/: store.ts
frontend/src/types/: api.d.ts
ops/: maintenance.html  nixops.nix  proxmox.nix
ops/nix/: sources.json
ops/secrets/: backendEnv.age  secrets.nix
unionGov/gov/: models.py  serializers.py  urls.py  views.py
unionGov/gov/migrations/: 0002_alter_candidate_image_url.py  0003_remove_configref_save_date_candidate_website_url_and_more.py  0004_alter_candidate_image_url.py  0005_candidate_deleted.py
unionGov/unionGov/: settings.py
(+6 files in other folders)
