[tool.poetry]
name = "uniongov"
version = "0.1.0"
description = "Union Governement backend app"
authors = []
license = "MIT"
packages = [{ include = "unionGov", from = "unionGov" }, { include = "gov", from = "unionGov" }]

[tool.poetry.dependencies]
python = "^3.9"
django = ">=3.2"
pyyaml = "~=5.4"
djangorestframework = "^3.12.4"
django-cors-headers = "^3.10.1"
django-filter = "^21.1"
psycopg2-binary = "^2.9.2"
django-environ = "^0.8.1"
pytz = "^2021.3"
Pillow = "^8.4.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
